<resources>
    <string name="app_name" translatable="false">Easy HairCut</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Sing_Up">Sing Up</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="repeat_email">Repeat Email</string>
    <string name="userType">User Type</string>
    <string name="hair_dresser">Hair Dresser</string>
    <string name="successful_register">Successful Register</string>
    <string name="failed_register">Failed Register</string>
    <string name="missing_data">Missing data</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_success">Authentication success</string>
    <string name="email_no_valid">Email no valid</string>
    <string name="password_no_valid">Password no valid</string>
    <string name="email_not_match">Email not match</string>
    <string name="password_not_match">Password not match</string>
    <string name="pass_or_email_not_match">Password or email not match</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="info_register">Password must contain 6 characters and must match both emails and both passwords</string>
    <string name="hairdresser">Hairdresser</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="location_denied">Location permits previously denied, switch on manually</string>
    <string name="recent_dates">Recent Dates</string>
    <string name="actual_dates">Actual Dates</string>
    <string name="add_date">Add Date</string>
    <string name="add_date_description">Add new date for this hairdresser</string>
    <string name="accept_date">Do you want to confirm this date?</string>
    <string name="hour">Hour</string>
    <string name="cite_no_available">Date no Available</string>
    <string name="date_confirm">Date confirm with success</string>
    <string name="change_schedule">Change Schedule</string>
    <string name="accept">Accept</string>
    <string name="change_saved" >Change Saved</string>
    <string name="near_date">Near Date</string>
    <string name="next_date">Next date</string>
    <string name="delete">Delete</string>
    <string name="delete_last_dates">Cant delete past dates</string>

</resources>
